# multimodal-assistant-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py  service.py
docs/: architecture.md
tests/: test_service.py
