[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-assistant-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
